# openauto

./: CMakeLists.txt  CMakePresets.json  Readme.md  openauto.ini  vcpkg.json
include/f1x/openauto/autoapp/Projection/: QtVideoOutput.hpp
include/f1x/openauto/autoapp/Service/: AndroidAutoEntity.hpp  VideoService.hpp
src/autoapp/: autoapp.cpp
src/autoapp/Configuration/: Configuration.cpp
src/autoapp/Projection/: RtAudioOutput.cpp
src/autoapp/Service/: AndroidAutoEntity.cpp  VideoService.cpp
src/autoapp/UI/: mainwindow.ui
